# dissect-docs

./: .gitignore  .gitmodules  .readthedocs.yaml  COPYRIGHT  README.md  demo.ascii  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: dissect-ci.yml
docs/: Makefile  demo.ascii
docs/source/: acquire.rst  conf.py  index.rst  install.rst  license.rst  rdump.rst  supported-targets.rst  target-mount.rst  target-query.rst  target-shell.rst  tutorial.rst  versions.rst
docs/source/_defaults/: child_targets.csv  containers.csv  filesystems.csv  loaders.csv  operating_systems.csv  partition_schemes.csv  volumes.csv
docs/source/_ext/: dissect_plugins.py  dissect_supported_table.py  supported_table.py  supported_targets.py
docs/source/_static/css/: custom.css  konami.css
docs/source/advanced/: api.rst  children.rst  containers.rst  filesystems.rst  index.rst  loaders.rst  plugins.rst  record_descriptors.rst  records.rst  targets.rst  volumes.rst
docs/source/api/: index.rst
docs/source/contributing/: codestyle.py  developing.rst  style-guide.rst  tooling.rst
docs/source/overview/: index.rst
docs/source/plugins/: index.rst
docs/source/projects/: index.rst
docs/source/resources/: dissect-in-action.rst  talks-and-conferences.rst
docs/source/tools/: acquire.rst  cstruct-stubgen.rst  index.rst  rdump.rst  target-dd.rst  target-dump.rst  target-fs.rst  target-info.rst  target-mount.rst  target-query.rst  target-reg.rst  target-shell.rst
docs/source/tutorial/: index.rst  preparation.rst
docs/source/usage/: disk-encryption.rst  index.rst  introduction.rst  use-cases.rst
(+43 files in other folders)
